--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Science & Informatics Portfolio</title>
+
+    <title>Adrian Molhany – Portfolio & Projects</title>
+    
+<meta name="description" content="Welcome to Adrian Molhany's personal website showcasing web development projects, skills, and contact info.">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
