--- a/index.html
+++ b/index.html
@@ -511,8 +511,8 @@
                         <div class="social-links">
                             <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
                             <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                            <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                            <a href="#" class="social-link"><i class="fas fa-globe"></i></a>
+                            <a href="https://wa.me/+263712118756?text=Hello%20Adrian%2C%20I%20visited%20your%20website%20and%20would%20like%20to%20inquire%20about%20one%20of%20your%20services." target="_blank" class="social-link">
+ <i class="fab fa-whatsapp" style=" color: #25D366;"></i> </a>
                         </div>
                     </div>
                 </div>
