--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Adrian Molhany – Portfolio & Projects</title>
-    
-<meta name="description" content="Welcome to Adrian Molhany's personal website showcasing web development projects, skills, and contact info.">
+    <title>Data Science & Informatics Portfolio</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -511,6 +508,7 @@
                         <div class="social-links">
                             <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
                             <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+                            
                             <a href="https://wa.me/+263712118756?text=Hello%20Adrian%2C%20I%20visited%20your%20website%20and%20would%20like%20to%20inquire%20about%20one%20of%20your%20services." target="_blank" class="social-link">
  <i class="fab fa-whatsapp" style=" color: #25D366;"></i> </a>
                         </div>
@@ -551,6 +549,38 @@
             </div>
         </div>
     </footer>
+
+    <!-- Mobile Bottom Navigation -->
+    <nav class="mobile-bottom-nav d-lg-none">
+        <div class="container">
+            <div class="row">
+                <div class="col-3 text-center">
+                    <a href="#home" class="nav-link">
+                        <i class="fas fa-home"></i>
+                        <span>Home</span>
+                    </a>
+                </div>
+                <div class="col-3 text-center">
+                    <a href="#projects" class="nav-link">
+                        <i class="fas fa-project-diagram"></i>
+                        <span>Projects</span>
+                    </a>
+                </div>
+                <div class="col-3 text-center">
+                    <a href="#about" class="nav-link">
+                        <i class="fas fa-user"></i>
+                        <span>About</span>
+                    </a>
+                </div>
+                <div class="col-3 text-center">
+                    <a href="#contact" class="nav-link">
+                        <i class="fas fa-envelope"></i>
+                        <span>Contact</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
