--- a/index.html
+++ b/index.html
@@ -34,22 +34,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#home">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#skills">Skills</a>
+                        <a class="nav-link" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#projects">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#experience">Experience</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -287,7 +281,8 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="project-card">
                         <div class="project-image">
-                            <canvas id="projectChart1"></canvas>
+                            
+                                <img src="Muna.jpg" alt="E-commerce Analytics" class="project-img">
                         </div>
                         <div class="project-content">
                             <h5>Predictive Analytics Platform</h5>
@@ -561,19 +556,19 @@
                     </a>
                 </div>
                 <div class="col-3 text-center">
-                    <a href="#projects" class="nav-link">
+                    <a href="projects.html" class="nav-link">
                         <i class="fas fa-project-diagram"></i>
                         <span>Projects</span>
                     </a>
                 </div>
                 <div class="col-3 text-center">
-                    <a href="#about" class="nav-link">
+                    <a href="about.html" class="nav-link">
                         <i class="fas fa-user"></i>
                         <span>About</span>
                     </a>
                 </div>
                 <div class="col-3 text-center">
-                    <a href="#contact" class="nav-link">
+                    <a href="contact.html" class="nav-link">
                         <i class="fas fa-envelope"></i>
                         <span>Contact</span>
                     </a>
